# contender

./: Cargo.toml  longterm_contender_test.sh  longterm_testing.sh  uniswap_contender_test.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  util.rs
crates/cli/src/commands/: contender_subcommand.rs  db.rs  run.rs  setup.rs  spam.rs
crates/cli/src/commands/report/: block_trace.rs  gen_html.rs  mod.rs
crates/cli/src/commands/report/chart/: gas_per_block.rs  heatmap.rs  time_to_inclusion.rs  tx_gas_used.rs
crates/cli/src/default_scenarios/: runconfig.rs
crates/core/: Cargo.toml
crates/core/src/: agent_controller.rs  test_scenario.rs
crates/core/src/generator/: mod.rs  types.rs
crates/core/src/generator/seeder/: rand_seed.rs
crates/core/src/spammer/: blockwise.rs  spammer_trait.rs  tx_actor.rs  tx_callback.rs  util.rs
crates/sqlite_db/: Cargo.toml
crates/sqlite_db/src/: lib.rs
crates/testfile/src/: lib.rs
scenarios/: do-erc20.toml  do-uniV2.toml  gasBurner.toml  original_uniV2.toml  pre-erc20.toml  pre-uniV2.toml  swap.toml  uniV2.toml
