[package]
name = "contender_core"
version = "0.1.0"
edition = "2021"
authors = ["Brock Smedley"]

[lib]
name = "contender_core"
path = "src/lib.rs"

[dependencies]
alloy = { workspace = true, features = ["full", "node-bindings", "rpc-types-mev"] }
# eyre = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["signal"]}
serde_json = { workspace = true }
contender_bundle_provider = { workspace = true }
async-tungstenite = { version = "0.14", features = ["tokio-runtime"] }
web3 = "0.19"
url = "2.5"
hex = "0.4.3"
chrono = "0.4"
dashmap = "6.1.0"
reqwest = "0.12.12"
threadpool = "1.8.1"
log = "0.4.25"
